@@ -20,6 +20,8 @@ Version 12   2011-February-17
 
 --Fixed power-set sum overflow issues (thanks Jimmy Andrews).
 
+--Fixed power-up level numbers so that they don't overflow.  Added a bar-graph 
+  style powers-of-ten display, along with three most significant digits.
 
 
 
